fix text not centered

--- a/style.css
+++ b/style.css
@@ -148,6 +148,11 @@ body {
 
 .congratulation__name {
   font-size: 24px;
+  text-align: center;
+}
+
+.congratulation__description {
+  text-align: center;
 }
 
 @keyframes bloom {
